# auto-cursor

./: .gitignore  ACCOUNT_SWITCH_GUIDE.md  CURSOR_REGISTRATION.md  CUSTOM_CURSOR_PATH_GUIDE.md  LOGGING_GUIDE.md  README.md  WARP_CLEAN_ENHANCEMENTS.md  WARP_CLEAN_MACOS_ENHANCEMENTS.md  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: PUBLIC_REPO_SETUP.md  README.md  build-simple.yml  build.yml  quick-build.yml  release-to-public.yml
src/: App.css  App.tsx  App_old.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/pyBuild/linux/: README.md
src-tauri/pyBuild/macos/: README.md
src-tauri/pyBuild/windows/: README.md
src-tauri/python_scripts/: .gitignore  README.md  account_manager.py  build_executable.py  cursor_register_manual.py  manual_register.py  new_signup.py  requirements_minimal.txt
src-tauri/src/: account_manager.rs  auth_checker.rs  lib.rs  logger.rs  machine_id.rs
src/components/: ActionCard.tsx  AggregatedUsageDisplay.tsx  BackupSelectModal.tsx  BankCardConfigModal.tsx  Button.tsx  ConfirmDialog.tsx  EmailConfigModal.tsx  InfoCard.tsx  Layout.tsx  PageHeader.tsx  PageSection.tsx  Section.tsx  StatusCard.tsx  Toast.tsx  UpdateModal.tsx  UsageDetailsModal.tsx  UsageDisplay.tsx
src/context/: ThemeContext.tsx
src/features/logs/: LogTable.tsx  LogToolbar.tsx  parseLogs.ts  types.ts  utils.ts
src/pages/: AuthCheckPage.tsx  AutoRegisterPage.tsx  HomePage.tsx  LogsPage.tsx  MachineIdPage.tsx  TokenManagePage.tsx  VirtualCardGeneratorPage.tsx  WarpCleanPage.tsx
src/services/: accountService.ts  analyticsService.ts  bankCardConfigService.ts  cursorService.ts  emailConfigService.ts  updateService.ts
src/types/: account.ts  auth.ts  bankCardConfig.ts  emailConfig.ts  update.ts
src/utils/: cursorToken.ts
